--- a/pages/alquiler.html
+++ b/pages/alquiler.html
@@ -4,23 +4,23 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Superultra Real Estate</title>
-    <link href="assets/img/favicon.png" rel="icon">
+    <link href="img/favicon.ico" rel="icon">
     <link href="https://fonts.googleapis.com/css?family=Geologica:300,300i,400,400i,600,600i,700,700i|Ubuntu:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="scripts/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="scripts/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="scripts/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="scripts/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="scripts/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header id="header" class="d-flex align-items-center">
       <div class="container-fluid d-flex align-items-center justify-content-lg-between">
-        <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="Logo" class="img-fluid"></a>
+        <a href="index.html" class="logo me-auto me-lg-0"><img src="img/logo.png" alt="Logo" class="img-fluid"></a>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
             <li><a class="nav-link scrollto" href="index.html">Inicio</a></li>
-            <li><a class="nav-link scrollto" href="venta.html">Propiedades en venta</a></li>
+            <li><a class="nav-link scrollto" href="pages/venta.html">Propiedades en venta</a></li>
             <!--¿Va así vacío el HREF cuando no tiene que tener link? ¿O sin HREF por completo?-->
             <li><a class="nav-link scrollto active" href="">Propiedades en alquiler</a></li>
             <li><a class="nav-link scrollto" href="index.html#contacto">Contacto</a></li>
@@ -44,7 +44,7 @@
           <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/b.jpg" alt="Edificio">
+                <img class="card-img-top" src="img/fachadas/b.jpg" alt="Edificio">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Departamento 2 amb. en Palermo</h5>
@@ -53,14 +53,14 @@
                 </div>
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                   <div class="text-center">
-                    <a class="btn btn-outline-dark mt-auto" href="propiedad-9.html">Ver propiedad</a>
+                    <a class="btn btn-outline-dark mt-auto" href="pages/propiedad-9.html">Ver propiedad</a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/d.jpg" alt="Edificio">
+                <img class="card-img-top" src="img/fachadas/d.jpg" alt="Edificio">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Departamento 2 amb. en Puerto Madero</h5>
@@ -69,14 +69,14 @@
                 </div>
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                   <div class="text-center">
-                    <a class="btn btn-outline-dark mt-auto" href="propiedad-10.html">Ver propiedad</a>
+                    <a class="btn btn-outline-dark mt-auto" href="pages/propiedad-10.html">Ver propiedad</a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/g.jpg" alt="Casa">
+                <img class="card-img-top" src="img/fachadas/g.jpg" alt="Casa">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Casa 3 amb. en Pinamar</h5>
@@ -85,14 +85,14 @@
                 </div>
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                   <div class="text-center">
-                    <a class="btn btn-outline-dark mt-auto" href="propiedad-11.html">Ver propiedad</a>
+                    <a class="btn btn-outline-dark mt-auto" href="pages/propiedad-11.html">Ver propiedad</a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/i.jpg" alt="Casa">
+                <img class="card-img-top" src="img/fachadas/i.jpg" alt="Casa">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Casa 5 amb. en Pilar</h5>
@@ -101,14 +101,14 @@
                 </div>
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                   <div class="text-center">
-                    <a class="btn btn-outline-dark mt-auto" href="propiedad-12.html">Ver propiedad</a>
+                    <a class="btn btn-outline-dark mt-auto" href="pages/propiedad-12.html">Ver propiedad</a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/k.jpg" alt="Casa">
+                <img class="card-img-top" src="img/fachadas/k.jpg" alt="Casa">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Casa 5 amb. en Vicente López</h5>
@@ -117,14 +117,14 @@
                 </div>
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                   <div class="text-center">
-                    <a class="btn btn-outline-dark mt-auto" href="propiedad-13.html">Ver propiedad</a>
+                    <a class="btn btn-outline-dark mt-auto" href="pages/propiedad-13.html">Ver propiedad</a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/m.jpg" alt="Casa">
+                <img class="card-img-top" src="img/fachadas/m.jpg" alt="Casa">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Casa 4 amb. en Belgrano</h5>
@@ -133,14 +133,14 @@
                 </div>
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                   <div class="text-center">
-                    <a class="btn btn-outline-dark mt-auto" href="propiedad-14.html">Ver propiedad</a>
+                    <a class="btn btn-outline-dark mt-auto" href="pages/propiedad-14.html">Ver propiedad</a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/o.jpg" alt="Terraza">
+                <img class="card-img-top" src="img/fachadas/o.jpg" alt="Terraza">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Departamento 3 amb. en Retiro</h5>
@@ -149,14 +149,14 @@
                 </div>
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                   <div class="text-center">
-                    <a class="btn btn-outline-dark mt-auto" href="propiedad-15.html">Ver propiedad</a>
+                    <a class="btn btn-outline-dark mt-auto" href="pages/propiedad-15.html">Ver propiedad</a>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/q.jpg" alt="Edificio">
+                <img class="card-img-top" src="img/fachadas/q.jpg" alt="Edificio">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Departamento 3 amb. en Caballito</h5>
@@ -165,7 +165,7 @@
                 </div>
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                   <div class="text-center">
-                    <a class="btn btn-outline-dark mt-auto" href="propiedad-16.html">Ver propiedad</a>
+                    <a class="btn btn-outline-dark mt-auto" href="pages/propiedad-16.html">Ver propiedad</a>
                   </div>
                 </div>
               </div>
@@ -187,9 +187,9 @@
     </footer>
   
     <div id="spinner"></div>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="scripts/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="scripts/glightbox/js/glightbox.min.js"></script>
+    <script src="scripts/swiper/swiper-bundle.min.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
