--- a/pages/alquiler.html
+++ b/pages/alquiler.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Superultra Real Estate</title>
-    <link href="Trabajo-Final/img/favicon.ico" rel="icon">
+    <link href="../img/favicon.ico" rel="icon">
     <link href="https://fonts.googleapis.com/css?family=Geologica:300,300i,400,400i,600,600i,700,700i|Ubuntu:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-    <link href="Trabajo-Final/scripts/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="Trabajo-Final/scripts/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="Trabajo-Final/scripts/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="Trabajo-Final/scripts/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="Trabajo-Final/scripts/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="Trabajo-Final/css/style.css" rel="stylesheet">
+    <link href="../scripts/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../scripts/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="../scripts/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="../scripts/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="../scripts/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
   </head>
   <body>
     <header id="header" class="d-flex align-items-center">
@@ -19,11 +19,11 @@
         <a href="index.html" class="logo me-auto me-lg-0"><img src="../img/logo.png" alt="Logo" class="img-fluid"></a>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a class="nav-link scrollto" href="Trabajo-Final/index.html">Inicio</a></li>
+            <li><a class="nav-link scrollto" href="../index.html">Inicio</a></li>
             <li><a class="nav-link scrollto" href="venta.html">Propiedades en venta</a></li>
             <!--¿Va así vacío el HREF cuando no tiene que tener link? ¿O sin HREF por completo?-->
             <li><a class="nav-link scrollto active" href="">Propiedades en alquiler</a></li>
-            <li><a class="nav-link scrollto" href="Trabajo-Final/index.html#contacto">Contacto</a></li>
+            <li><a class="nav-link scrollto" href="../index.html#contacto">Contacto</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -33,7 +33,7 @@
       <section id="breadcrumbs" class="breadcrumbs">
         <div class="container">
           <ol>
-            <li><a href="Trabajo-Final/index.html">Inicio</a></li>
+            <li><a href="../index.html">Inicio</a></li>
             <li>Propiedades en alquiler</li>
           </ol>
           <h2>Propiedades en alquiler</h2>
@@ -44,7 +44,7 @@
           <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="Trabajo-Final/img/fachadas/b.jpg" alt="Edificio">
+                <img class="card-img-top" src="../img/fachadas/b.jpg" alt="Edificio">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Departamento 2 amb. en Palermo</h5>
@@ -60,7 +60,7 @@
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="Trabajo-Final/img/fachadas/d.jpg" alt="Edificio">
+                <img class="card-img-top" src="../img/fachadas/d.jpg" alt="Edificio">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Departamento 2 amb. en Puerto Madero</h5>
@@ -76,7 +76,7 @@
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="Trabajo-Final/img/fachadas/g.jpg" alt="Casa">
+                <img class="card-img-top" src="../img/fachadas/g.jpg" alt="Casa">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Casa 3 amb. en Pinamar</h5>
@@ -92,7 +92,7 @@
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="Trabajo-Final/img/fachadas/i.jpg" alt="Casa">
+                <img class="card-img-top" src="../img/fachadas/i.jpg" alt="Casa">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Casa 5 amb. en Pilar</h5>
@@ -108,7 +108,7 @@
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="Trabajo-Final/img/fachadas/k.jpg" alt="Casa">
+                <img class="card-img-top" src="../img/fachadas/k.jpg" alt="Casa">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Casa 5 amb. en Vicente López</h5>
@@ -124,7 +124,7 @@
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="Trabajo-Final/img/fachadas/m.jpg" alt="Casa">
+                <img class="card-img-top" src="../img/fachadas/m.jpg" alt="Casa">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Casa 4 amb. en Belgrano</h5>
@@ -140,7 +140,7 @@
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="Trabajo-Final/img/fachadas/o.jpg" alt="Terraza">
+                <img class="card-img-top" src="../img/fachadas/o.jpg" alt="Terraza">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Departamento 3 amb. en Retiro</h5>
@@ -156,7 +156,7 @@
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="Trabajo-Final/img/fachadas/q.jpg" alt="Edificio">
+                <img class="card-img-top" src="../img/fachadas/q.jpg" alt="Edificio">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Departamento 3 amb. en Caballito</h5>
@@ -187,9 +187,9 @@
     </footer>
   
     <div id="spinner"></div>
-    <script src="Trabajo-Final/scripts/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="Trabajo-Final/scripts/glightbox/js/glightbox.min.js"></script>
-    <script src="Trabajo-Final/scripts/swiper/swiper-bundle.min.js"></script>
-    <script src="Trabajo-Final/scripts/main.js"></script>
+    <script src="../scripts/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../scripts/glightbox/js/glightbox.min.js"></script>
+    <script src="../scripts/swiper/swiper-bundle.min.js"></script>
+    <script src="../scripts/main.js"></script>
   </body>
 </html>
