--- a/pages/alquiler.html
+++ b/pages/alquiler.html
@@ -16,7 +16,7 @@
   <body>
     <header id="header" class="d-flex align-items-center">
       <div class="container-fluid d-flex align-items-center justify-content-lg-between">
-        <a href="index.html" class="logo me-auto me-lg-0"><img src="../img/logo.png" alt="Logo" class="img-fluid"></a>
+        <a href="../index.html" class="logo me-auto me-lg-0"><img src="../img/logo.png" alt="Logo" class="img-fluid"></a>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
             <li><a class="nav-link scrollto" href="../index.html">Inicio</a></li>
