--- a/pages/propiedad-6.html
+++ b/pages/propiedad-6.html
@@ -4,25 +4,25 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Superultra Real Estate</title>
-    <link href="assets/img/favicon.png" rel="icon">
+    <link href="../img/favicon.png" rel="icon">
     <link href="https://fonts.googleapis.com/css?family=Geologica:300,300i,400,400i,600,600i,700,700i|Ubuntu:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="../scripts/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../scripts/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="../scripts/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="../scripts/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="../scripts/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
   </head>
   <body>
     <header id="header" class="d-flex align-items-center">
       <div class="container-fluid d-flex align-items-center justify-content-lg-between">
-        <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="Logo" class="img-fluid"></a>
+        <a href="../index.html" class="logo me-auto me-lg-0"><img src="../img/logo.png" alt="Logo" class="img-fluid"></a>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a class="nav-link scrollto" href="index.html">Inicio</a></li>
+            <li><a class="nav-link scrollto" href="../index.html">Inicio</a></li>
             <li><a class="nav-link scrollto" href="venta.html">Propiedades en venta</a></li>
             <li><a class="nav-link scrollto" href="alquiler.html">Propiedades en alquiler</a></li>
-            <li><a class="nav-link scrollto" href="index.html#contacto">Contacto</a></li>
+            <li><a class="nav-link scrollto" href="../index.html#contacto">Contacto</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -45,16 +45,16 @@
             <div class="catalogo-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
-                  <img src="assets/img/fachadas/l.jpg" alt="Mansion">
+                  <img src="../img/fachadas/l.jpg" alt="Mansion">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/interiores/6.jpg" alt="Living">
+                  <img src="../img/interiores/6.jpg" alt="Living">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/interiores/22.jpg" alt="Baño">
+                  <img src="../img/interiores/22.jpg" alt="Baño">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/interiores/w.jpg" alt="Cocina">
+                  <img src="../img/interiores/w.jpg" alt="Cocina">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -111,9 +111,9 @@
     </div>
   </footer>
   <div id="spinner"></div>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="../scripts/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../scripts/glightbox/js/glightbox.min.js"></script>
+    <script src="../scripts/swiper/swiper-bundle.min.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
