--- a/pages/venta.html
+++ b/pages/venta.html
@@ -4,25 +4,25 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Superultra Real Estate</title>
-    <link href="assets/img/favicon.png" rel="icon">
+    <link href="../img/favicon.png" rel="icon">
     <link href="https://fonts.googleapis.com/css?family=Geologica:300,300i,400,400i,600,600i,700,700i|Ubuntu:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="../scripts/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../scripts/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="../scripts/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="../scripts/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="../scripts/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
   </head>
   <body>
     <header id="header" class="d-flex align-items-center">
       <div class="container-fluid d-flex align-items-center justify-content-lg-between">
-        <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="Logo" class="img-fluid"></a>
+        <a href="../index.html" class="logo me-auto me-lg-0"><img src="../img/logo.png" alt="Logo" class="img-fluid"></a>
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a class="nav-link scrollto" href="index.html">Inicio</a></li>
+            <li><a class="nav-link scrollto" href="../index.html">Inicio</a></li>
             <li><a class="nav-link scrollto active" href="">Propiedades en venta</a></li>
             <li><a class="nav-link scrollto" href="alquiler.html">Propiedades en alquiler</a></li>
-            <li><a class="nav-link scrollto" href="index.html#contacto">Contacto</a></li>
+            <li><a class="nav-link scrollto" href="../index.html#contacto">Contacto</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
@@ -32,7 +32,7 @@
       <section id="breadcrumbs" class="breadcrumbs">
         <div class="container">
           <ol>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="../index.html">Inicio</a></li>
             <li>Propiedades en venta</li>
           </ol>
           <h2>Propiedades en venta</h2>
@@ -44,7 +44,7 @@
           <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/a.jpg" alt="Edificio">
+                <img class="card-img-top" src="../img/fachadas/a.jpg" alt="Edificio">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Departamento 3 amb. en Chacarita</h5>
@@ -60,7 +60,7 @@
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/c.jpg" alt="Edificios">
+                <img class="card-img-top" src="../img/fachadas/c.jpg" alt="Edificios">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Departamento 2 amb. en Retiro</h5>
@@ -76,7 +76,7 @@
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/f.jpg" alt="Casa">
+                <img class="card-img-top" src="../img/fachadas/f.jpg" alt="Casa">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Casa 5 amb. en Mar del Plata</h5>
@@ -92,7 +92,7 @@
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/h.jpg" alt="Casa">
+                <img class="card-img-top" src="../img/fachadas/h.jpg" alt="Casa">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Casa 4 amb. en Mar del Tuyú</h5>
@@ -108,7 +108,7 @@
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/j.jpg" alt="Patio">
+                <img class="card-img-top" src="../img/fachadas/j.jpg" alt="Patio">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Chalet 3 ambientes en Bariloche</h5>
@@ -124,7 +124,7 @@
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/l.jpg" alt="Mansion">
+                <img class="card-img-top" src="../img/fachadas/l.jpg" alt="Mansion">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Casa 8 amb. en Canning</h5>
@@ -140,7 +140,7 @@
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/n.jpg" alt="Terraza">
+                <img class="card-img-top" src="../img/fachadas/n.jpg" alt="Terraza">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Departamento 2 amb. en Puerto Madero</h5>
@@ -156,7 +156,7 @@
             </div>
             <div class="col mb-5">
               <div class="card h-100">
-                <img class="card-img-top" src="assets/img/fachadas/p.jpg" alt="Edificio">
+                <img class="card-img-top" src="../img/fachadas/p.jpg" alt="Edificio">
                 <div class="card-body p-4">
                   <div class="text-center">
                     <h5 class="fw-bolder">Departamento 3 amb. en Almagro</h5>
@@ -187,9 +187,9 @@
     </footer>
   
     <div id="spinner"></div>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="../scripts/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../scripts/glightbox/js/glightbox.min.js"></script>
+    <script src="../scripts/swiper/swiper-bundle.min.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
