--- a/pages/propiedad-15.html
+++ b/pages/propiedad-15.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Superultra Real Estate</title>
-    <link href="../img/favicon.png" rel="icon">
+    <link href="../img/favicon.ico" rel="icon">
     <link href="https://fonts.googleapis.com/css?family=Geologica:300,300i,400,400i,600,600i,700,700i|Ubuntu:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <link href="../scripts/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="../scripts/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
