--- a/pages/venta.html
+++ b/pages/venta.html
@@ -190,6 +190,6 @@
     <script src="../scripts/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="../scripts/glightbox/js/glightbox.min.js"></script>
     <script src="../scripts/swiper/swiper-bundle.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="../scripts/main.js"></script>
   </body>
 </html>
